--- a/MyCOPilotX/MyCOPilot.csproj
+++ b/MyCOPilotX/MyCOPilot.csproj
@@ -86,6 +86,45 @@
     <AndroidResource Include="Resources\mipmap-xhdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-xxhdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\Icon.png" />
+    <AndroidResource Include="Resources\drawable\Assessments.png" />
+    <AndroidResource Include="Resources\drawable\Background.jpg" />
+    <AndroidResource Include="Resources\drawable\Batman.png" />
+    <AndroidResource Include="Resources\drawable\BHBW Logo.png" />
+    <AndroidResource Include="Resources\drawable\Blue Overlay.png" />
+    <AndroidResource Include="Resources\drawable\BreathingRate.png" />
+    <AndroidResource Include="Resources\drawable\CompleteSession.png" />
+    <AndroidResource Include="Resources\drawable\CoPilotIcon.png" />
+    <AndroidResource Include="Resources\drawable\CoPilotSmall.png" />
+    <AndroidResource Include="Resources\drawable\Cough.png" />
+    <AndroidResource Include="Resources\drawable\Doctor.png" />
+    <AndroidResource Include="Resources\drawable\EndSession.png" />
+    <AndroidResource Include="Resources\drawable\Fatigued.png" />
+    <AndroidResource Include="Resources\drawable\FullHistory.png" />
+    <AndroidResource Include="Resources\drawable\GreenButton.png" />
+    <AndroidResource Include="Resources\drawable\Hand-on-Chest.png" />
+    <AndroidResource Include="Resources\drawable\HomePage.png" />
+    <AndroidResource Include="Resources\drawable\LargeCircle.png" />
+    <AndroidResource Include="Resources\drawable\Learn.png" />
+    <AndroidResource Include="Resources\drawable\Medication.png" />
+    <AndroidResource Include="Resources\drawable\Menu.png" />
+    <AndroidResource Include="Resources\drawable\Meter.png" />
+    <AndroidResource Include="Resources\drawable\MylanLogo.png" />
+    <AndroidResource Include="Resources\drawable\PeakFlow.png" />
+    <AndroidResource Include="Resources\drawable\Picture1.png" />
+    <AndroidResource Include="Resources\drawable\Play Button.png" />
+    <AndroidResource Include="Resources\drawable\ProduceSputum.png" />
+    <AndroidResource Include="Resources\drawable\Profile.PNG" />
+    <AndroidResource Include="Resources\drawable\ProfilePicture.png" />
+    <AndroidResource Include="Resources\drawable\RoundButton.png" />
+    <AndroidResource Include="Resources\drawable\RX.png" />
+    <AndroidResource Include="Resources\drawable\SelfChecks.png" />
+    <AndroidResource Include="Resources\drawable\Shortness of breath.PNG" />
+    <AndroidResource Include="Resources\drawable\ShortnessOfBreathActive.png" />
+    <AndroidResource Include="Resources\drawable\Splash Screen.PNG" />
+    <AndroidResource Include="Resources\drawable\SplashScreenLady.jpg" />
+    <AndroidResource Include="Resources\drawable\StartButton.png" />
+    <AndroidResource Include="Resources\drawable\TakingMeds.png" />
+    <AndroidResource Include="Resources\drawable\Vitals.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
