--- a/MyCOPilotX/MyCOPilot.csproj
+++ b/MyCOPilotX/MyCOPilot.csproj
@@ -66,6 +66,12 @@
     <Reference Include="FakeBand">
       <HintPath>..\packages\FakeBand.0.0.8\lib\portable-net45+win+wpa81\FakeBand.dll</HintPath>
     </Reference>
+    <Reference Include="Xamarin.Android.Support.v4">
+      <HintPath>..\packages\Xamarin.Android.Support.v4.23.1.1.0\lib\MonoAndroid403\Xamarin.Android.Support.v4.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.Android.Support.v7.AppCompat">
+      <HintPath>..\packages\Xamarin.Android.Support.v7.AppCompat.23.1.1.0\lib\MonoAndroid403\Xamarin.Android.Support.v7.AppCompat.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Resources\Resource.designer.cs" />
@@ -118,13 +124,15 @@
     <AndroidResource Include="Resources\drawable\RoundButton.png" />
     <AndroidResource Include="Resources\drawable\RX.png" />
     <AndroidResource Include="Resources\drawable\SelfChecks.png" />
-    <AndroidResource Include="Resources\drawable\Shortness of breath.PNG" />
     <AndroidResource Include="Resources\drawable\ShortnessOfBreathActive.png" />
-    <AndroidResource Include="Resources\drawable\Splash Screen.PNG" />
     <AndroidResource Include="Resources\drawable\SplashScreenLady.jpg" />
     <AndroidResource Include="Resources\drawable\StartButton.png" />
     <AndroidResource Include="Resources\drawable\TakingMeds.png" />
     <AndroidResource Include="Resources\drawable\Vitals.png" />
+    <AndroidResource Include="Resources\layout\Splash.axml" />
+    <AndroidResource Include="Resources\drawable\SplashScreen.PNG" />
+    <AndroidResource Include="Resources\drawable\Shortnessofbreath.PNG" />
+    <AndroidResource Include="Resources\values\styles.xml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
