--- a/MyCOPilotX/packages.config
+++ b/MyCOPilotX/packages.config
@@ -7,6 +7,8 @@
   <package id="Rx-Linq" version="2.2.5" targetFramework="MonoAndroid44" />
   <package id="Rx-Main" version="2.2.5" targetFramework="MonoAndroid44" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.Android.Support.v4" version="23.1.1.0" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.1.1.0" targetFramework="MonoAndroid44" />
   <package id="Xamarin.Microsoft.Band" version="1.3.7" targetFramework="MonoAndroid44" />
   <package id="Xamarin.Microsoft.Band.Native" version="1.3.7" targetFramework="MonoAndroid44" />
 </packages>
